--- a/sass/custom.css
+++ b/sass/custom.css
@@ -1,3 +1,19 @@
+@media (min-width: 992px) {
+  .alto-100 {
+    height: 100vh;
+  }
+}
+
+.d-flex img {
+  width: 50px;
+}
+
+.fondo-card {
+  background-image: url("../images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: 85% top;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -28,7 +44,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #733FC8;
-  --bs-secondary: #EDF2F1;
+  --bs-secondary: #41836A;
   --bs-success: #49556B;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
@@ -36,7 +52,7 @@
   --bs-light: #f8f9fa;
   --bs-dark: #18202D;
   --bs-primary-rgb: 115, 63, 200;
-  --bs-secondary-rgb: 237, 242, 241;
+  --bs-secondary-rgb: 65, 131, 106;
   --bs-success-rgb: 73, 85, 107;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -671,13 +687,13 @@ progress {
 
 @media (min-width: 1200px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl {
-    max-width: 1140px;
+    max-width: 960px;
   }
 }
 
 @media (min-width: 1400px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
-    max-width: 1320px;
+    max-width: 960px;
   }
 }
 
@@ -2102,15 +2118,15 @@ progress {
 }
 
 .table-secondary {
-  --bs-table-bg: #fbfcfc;
-  --bs-table-striped-bg: #eeefef;
+  --bs-table-bg: #d9e6e1;
+  --bs-table-striped-bg: #cedbd6;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e2e3e3;
+  --bs-table-active-bg: #c3cfcb;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e8e9e9;
+  --bs-table-hover-bg: #c9d5d0;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #e2e3e3;
+  border-color: #c3cfcb;
 }
 
 .table-success {
@@ -3252,43 +3268,43 @@ fieldset:disabled .btn {
 
 .btn-secondary {
   color: #000;
-  background-color: #EDF2F1;
-  border-color: #EDF2F1;
+  background-color: #41836A;
+  border-color: #41836A;
 }
 
 .btn-secondary:hover {
   color: #000;
-  background-color: #f0f4f3;
-  border-color: #eff3f2;
+  background-color: #5e9680;
+  border-color: #548f79;
 }
 
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
   color: #000;
-  background-color: #f0f4f3;
-  border-color: #eff3f2;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(201, 206, 205, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(201, 206, 205, 0.5);
+  background-color: #5e9680;
+  border-color: #548f79;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(55, 111, 90, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(55, 111, 90, 0.5);
 }
 
 .btn-check:checked + .btn-secondary,
 .btn-check:active + .btn-secondary, .btn-secondary:active, .btn-secondary.active,
 .show > .btn-secondary.dropdown-toggle {
   color: #000;
-  background-color: #f1f5f4;
-  border-color: #eff3f2;
+  background-color: #679c88;
+  border-color: #548f79;
 }
 
 .btn-check:checked + .btn-secondary:focus,
 .btn-check:active + .btn-secondary:focus, .btn-secondary:active:focus, .btn-secondary.active:focus,
 .show > .btn-secondary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(201, 206, 205, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(201, 206, 205, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(55, 111, 90, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(55, 111, 90, 0.5);
 }
 
 .btn-secondary:disabled, .btn-secondary.disabled {
   color: #000;
-  background-color: #EDF2F1;
-  border-color: #EDF2F1;
+  background-color: #41836A;
+  border-color: #41836A;
 }
 
 .btn-success {
@@ -3572,36 +3588,36 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-secondary {
-  color: #EDF2F1;
-  border-color: #EDF2F1;
+  color: #41836A;
+  border-color: #41836A;
 }
 
 .btn-outline-secondary:hover {
   color: #000;
-  background-color: #EDF2F1;
-  border-color: #EDF2F1;
+  background-color: #41836A;
+  border-color: #41836A;
 }
 
 .btn-check:focus + .btn-outline-secondary, .btn-outline-secondary:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(237, 242, 241, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(237, 242, 241, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(65, 131, 106, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(65, 131, 106, 0.5);
 }
 
 .btn-check:checked + .btn-outline-secondary,
 .btn-check:active + .btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show {
   color: #000;
-  background-color: #EDF2F1;
-  border-color: #EDF2F1;
+  background-color: #41836A;
+  border-color: #41836A;
 }
 
 .btn-check:checked + .btn-outline-secondary:focus,
 .btn-check:active + .btn-outline-secondary:focus, .btn-outline-secondary:active:focus, .btn-outline-secondary.active:focus, .btn-outline-secondary.dropdown-toggle.show:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(237, 242, 241, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(237, 242, 241, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(65, 131, 106, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(65, 131, 106, 0.5);
 }
 
 .btn-outline-secondary:disabled, .btn-outline-secondary.disabled {
-  color: #EDF2F1;
+  color: #41836A;
   background-color: transparent;
 }
 
@@ -5616,13 +5632,13 @@ fieldset:disabled .btn {
 }
 
 .alert-secondary {
-  color: #5f6160;
-  background-color: #fbfcfc;
-  border-color: #fafbfb;
+  color: #274f40;
+  background-color: #d9e6e1;
+  border-color: #c6dad2;
 }
 
 .alert-secondary .alert-link {
-  color: #4c4e4d;
+  color: #1f3f33;
 }
 
 .alert-success {
@@ -6035,19 +6051,19 @@ fieldset:disabled .btn {
 }
 
 .list-group-item-secondary {
-  color: #5f6160;
-  background-color: #fbfcfc;
+  color: #274f40;
+  background-color: #d9e6e1;
 }
 
 .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-  color: #5f6160;
-  background-color: #e2e3e3;
+  color: #274f40;
+  background-color: #c3cfcb;
 }
 
 .list-group-item-secondary.list-group-item-action.active {
   color: #fff;
-  background-color: #5f6160;
-  border-color: #5f6160;
+  background-color: #274f40;
+  border-color: #274f40;
 }
 
 .list-group-item-success {
@@ -7366,11 +7382,11 @@ fieldset:disabled .btn {
 }
 
 .link-secondary {
-  color: #EDF2F1;
+  color: #41836A;
 }
 
 .link-secondary:hover, .link-secondary:focus {
-  color: #f1f5f4;
+  color: #679c88;
 }
 
 .link-success {
@@ -7860,7 +7876,7 @@ fieldset:disabled .btn {
 }
 
 .border-secondary {
-  border-color: #EDF2F1 !important;
+  border-color: #41836A !important;
 }
 
 .border-success {
